Se realizan los cambios para que el cambio de tema e idioma queden funcionando desde las opciones de la navbar

--- a/src/Languages/en.json
+++ b/src/Languages/en.json
@@ -1,4 +1,7 @@
 {
-    "welcome": "welcome to my portfolio",
-    "about": "About Me"
+    "whoAmI": "Who am I?",
+    "mySkills": "My Skills",
+    "projects": "Projects",
+    "changeLanguage": "Change Language",
+    "changeTheme": "Change Theme"
 }
