Se agrega mas informacion en los json de lenguaje, se crea nuevo componente que Habla 'sobre mi', ademas se crea componente de boton que tendra como funcion descargar el archivo de mi hoja de vida

--- a/src/Languages/en.json
+++ b/src/Languages/en.json
@@ -3,5 +3,8 @@
     "mySkills": "My Skills",
     "projects": "Projects",
     "changeLanguage": "Change Language",
-    "changeTheme": "Change Theme"
+    "changeTheme": "Change Theme",
+    "profession": "Mechatronic Engineer",
+    "description":"Hi! I'm Steveen Jimenez, a highly motivated Mechatronics Engineer with a solid background in the design, development, and implementation of innovative technology solutions. My outstanding technical skills, backed by an analytical mind, allow me to approach complex challenges with creativity and efficiency. My focus is on technical excellence and successful project delivery.",
+    "description2": "Additionally, I am continuously strengthening my English proficiency, currently at a B1 level. This enables me to function effectively in environments where communication in English is required. I also possess a solid knowledge of agile methodologies such as SCRUM, which enables me to work in a flexible and adaptive manner, maximizing efficiency in project management."
 }
