--- a/src/Languages/es.json
+++ b/src/Languages/es.json
@@ -3,5 +3,9 @@
     "mySkills": "Mis Habilidades",
     "projects": "Proyectos",
     "changeLanguage": "Cambiar Idioma",
-    "changeTheme": "Cambiar Tema"
+    "changeTheme": "Cambiar Tema",
+    "profession": "Ingeniero mecatrónico",
+    "description": "¡Hola! Soy Steveen Jimenez, un Ingeniero Mecatrónico altamente motivado con una sólida trayectoria en el diseño, desarrollo y puesta en marcha de soluciones tecnológicas innovadoras. Mis habilidades técnicas sobresalientes, respaldadas por una mente analítica, me permiten abordar desafíos complejos con creatividad y eficiencia. Mi enfoque se centra en la excelencia técnica y la entrega exitosa de proyectos.",
+    "description2":"Además, estoy continuamente fortaleciendo mi habilidad en inglés, actualmente en un nivel B1. Esto me permite desenvolverme de manera efectiva en entornos donde se requiera comunicación en inglés. Asimismo, poseo conocimientos sólidos sobre metodologías ágiles como el SCRUM, lo que me capacita para trabajar de manera flexible y adaptativa, maximizando la eficiencia en la gestión de proyectos."
+    
 }
