--- a/src/Languages/en.json
+++ b/src/Languages/en.json
@@ -5,6 +5,7 @@
     "changeLanguage": "Change Language",
     "changeTheme": "Change Theme",
     "profession": "Mechatronic Engineer",
+    "home" : "I have a strong track record in designing, developing and launching innovative technology solutions. My technical skills and analytical mind allow me to approach complex challenges with creativity and efficiency, focusing on technical excellence and successful project delivery. Currently, I am looking to strengthen my knowledge and gain industry experience, exploring opportunities to expand my skills and contribute significantly to software development.",
     "description":"Hi! I'm Steveen Jimenez, a highly motivated Mechatronics Engineer with a solid background in the design, development, and implementation of innovative technology solutions. My outstanding technical skills, backed by an analytical mind, allow me to approach complex challenges with creativity and efficiency. My focus is on technical excellence and successful project delivery.",
     "description2": "Additionally, I am continuously strengthening my English proficiency, currently at a B1 level. This enables me to function effectively in environments where communication in English is required. I also possess a solid knowledge of agile methodologies such as SCRUM, which enables me to work in a flexible and adaptive manner, maximizing efficiency in project management.",
     "download":"Download CV"
