se agrega archivo barril en carpeta de componentes para facilitar la importacion de los mismos, en json de lenguajes se agrega una nueva seccion para la navbar y se configura el componente de app y navbar para poder vincular cada boton de la misma con su seccion correspondiente

--- a/src/Languages/en.json
+++ b/src/Languages/en.json
@@ -1,5 +1,6 @@
 {
     "whoAmI": "Who am I?",
+    "about": "About me",
     "mySkills": "My Skills",
     "projects": "Projects",
     "changeLanguage": "Change Language",
