--- a/src/Languages/es.json
+++ b/src/Languages/es.json
@@ -1,5 +1,6 @@
 {
     "whoAmI": "¿Quién soy?",
+    "about": "Sobre Mi",
     "mySkills": "Mis Habilidades",
     "projects": "Proyectos",
     "changeLanguage": "Cambiar Idioma",
